--- a/server/server.properties
+++ b/server/server.properties
@@ -1,4 +1,4 @@
-server-name=Enszedog
+server-name=Dedicated Server
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
