--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xterm/xterm": "^5.5.0",
+    "chart.js": "^4.4.8",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.2",
+    "os-utils": "^0.0.14",
+    "path": "^0.12.7",
+    "ps-node": "^0.1.6",
+    "socket.io": "^4.8.1",
     "ssh2": "^1.16.0",
-    "ws": "^8.18.1"
-  }
+    "ws": "^8.18.1",
+    "xterm": "^5.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tisteba/Minecraft-Server-Monitoring.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/tisteba/Minecraft-Server-Monitoring/issues"
+  },
+  "homepage": "https://github.com/tisteba/Minecraft-Server-Monitoring#readme"
 }
